@@ -106,7 +106,7 @@
 #
 #	Default value is 3 - Color TV emulation!
 
-	Video Emulation =	1
+	Video Emulation =	6
 
 ##########################################################################
 #
@@ -168,14 +168,14 @@
 #
 # Default: your home directory (if not set)
 
-	Slot 6 Directory =	
+	Slot 6 Directory =	/home/bill/Downloads
 
 # You may also provide images to be inserted in 1 and 2 drive (D1 or D2) of Slot 6 at startup
 # Default: do not use, starting with image named Master.dsk in current directory
 
 # To get access to the disk in second drive(D2), use something like '] CATALOG,D2' at Applesoft DOS(tm) prompt.
 
-	Disk Image 1 =	
+	Disk Image 1 =	/home/bill/Downloads/Merlin-8 v2.58 (ProDOS) Disk 1-2.dsk
 	Disk Image 2 =	
 
 # The next parameter defines if you wish to auto-load these disk images in drives at startup!
