@@ -4,6 +4,8 @@ Changes for applelin 3.0:
 
 !! Added unistd.h include to fix compile failures
 
+!! Applied patch for big endian systems like PowerPC
+
 For LinApple version 2.0 has been made:
 
 !! Fixed screen corruption bug for x64 systems
